--- a/index.html
+++ b/index.html
@@ -30,15 +30,8 @@
 <div class="container"> 
   <!-- Navigation -->
   <header> <a href="">
-    <h4 class="logo">LIGHT</h4>
+    <h4 class="logo">Upliftium Statistics</h4>
     </a>
-    <nav>
-      <ul>
-        <li><a href="#hero">HOME</a></li>
-        <li><a href="#about">ABOUT</a></li>
-        <li> <a href="#contact">CONTACT</a></li>
-      </ul>
-    </nav>
   </header>
   <!-- Hero Section -->
   <section class="hero" id="hero">
