--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
   <!-- Stats Gallery Section -->
   <div class="gallery">
     <div class="thumbnail">
-      <h1 class="stats">	<div class="outputCircSup"></div>	<script src="stats.js"></script></h1>
-      <h4>Circulating</h4>
+      <h1 class="stats">	<div class="outputCircSup"></div>	</h1>
+      <h4>CIRCULATING</h4>
       <p>Supply of Upliftium</p>
     </div>
     <div class="thumbnail">
-      <h1 class="stats">2300</h1>
-      <h4>TITLE</h4>
-      <p>One line description</p>
+      <h1 class="stats"><div class="outputIssuedSup"></div></h1>
+      <h4>ISSUED</h4>
+      <p>Supply of Upliftium</p>
     </div>
     <div class="thumbnail">
       <h1 class="stats">7500</h1>
@@ -76,6 +76,7 @@
       <h4>TITLE</h4>
       <p>One line description</p>
     </div>
+    <script src="stats.js"></script>
   </div>
  
   <!-- Copyrights Section -->
