--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
       <p>Supply of Upliftium</p>
     </div>
     <div class="thumbnail">
-      <h1 class="stats">7500</h1>
-      <h4>TITLE</h4>
-      <p>One line description</p>
+      <h1 class="stats"><div class="outputClaimable"></h1>
+      <h4>CLAIMABLE</h4>
+      <p>Upliftium yet to be claimed</p>
     </div>
     <div class="thumbnail">
-      <h1 class="stats">9870</h1>
-      <h4>TITLE</h4>
-      <p>One line description</p>
+      <h1 class="stats"><div class="outputTransactionType"></div></h1>
+      <h4>Transactions</h4>
+      <p>In Game Shop Transactions</p>
     </div>
     <script src="stats.js"></script>
   </div>
