--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
   </header>
   <!-- Hero Section -->
   <section class="hero" id="hero">
-    <h2 class="hero_header"><span class="light">Top 25 Liftium Holders</span></h2>
+    <h2 class="hero_header"><span class="light"><br>Top 25 Liftium Holders</span></h2>
     <p class="tagline">XXXXXX</p>
 	 <div class="output"></div>
-	 <h2 class="hero_header"><span class="light">Top 50 Key Holders</span></h2>
+	 <h2 class="hero_header"><span class="light"><br>Top 100 Key Holders</span></h2>
     <p class="tagline">XXXXXX</p>
    	<div class="output2"></div>	
-	  <h2 class="hero_header"><span class="light">Upliftium  Burn Rank</span>
+	  <h2 class="hero_header"><span class="light"><br>Upliftium  Burn Rank</span>
       <p class="tagline"> XXXXXX</p>
 	  </h2>
 
@@ -57,22 +57,22 @@
   <!-- Stats Gallery Section -->
   <div class="gallery">
     <div class="thumbnail">
-      <h1 class="stats">	<div class="outputCircSup"></div>	</h1>
+      <h2 class="stats">	<div class="outputCircSup"></div>	</h2>
       <h4>CIRCULATING</h4>
       <p>Supply of Upliftium</p>
     </div>
     <div class="thumbnail">
-      <h1 class="stats"><div class="outputIssuedSup"></div></h1>
+      <h2 class="stats"><div class="outputIssuedSup"></div></h2>
       <h4>ISSUED</h4>
       <p>Supply of Upliftium</p>
     </div>
     <div class="thumbnail">
-      <h1 class="stats"><div class="outputClaimable"></h1>
+      <h2 class="stats"><div class="outputClaimable"></h2>
       <h4>CLAIMABLE</h4>
       <p>Upliftium yet to be claimed</p>
     </div>
     <div class="thumbnail">
-      <h1 class="stats"><div class="outputTransactionType"></div></h1>
+      <h2 class="stats"><div class="outputTransactionType"></div></h2>
       <h4>Transactions</h4>
       <p>In Game Shop Transactions</p>
     </div>
