--- a/index.html
+++ b/index.html
@@ -38,8 +38,13 @@
 	  <h2 class="hero_header"><span class="light"><br>Upliftium  Burn Rank</span>
       <p class="tagline"> XXXXXX</p>
 	  </h2>
-
      <div class="output3"></div>
+     
+     <h2 class="hero_header"><span class="light"><br>Top MIO holders</span>
+      <p class="tagline"> XXXXXX</p>
+	  </h2>
+     <div class="outputMio"></div>
+
    <script src="app.js"></script>
    <script src="TopKeyHolders.js"></script>
    <script src="TopBurn.js"></script>
