--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
   </header>
   <!-- Hero Section -->
   <section class="hero" id="hero">
-    <h2 class="hero_header"><span class="light"><br>Top 25 Liftium Holders</span></h2>
+    <h2 class="hero_header"><span class="light"><br><hr>Top 25 Liftium ALCOR</span></h2>
     <p class="tagline">XXXXXX</p>
 	 <div class="output"></div>
-	 <h2 class="hero_header"><span class="light"><br>Top 100 Key Holders</span></h2>
+	 <h2 class="hero_header"><span class="light"><br><hr>Top 100 Land Key</span></h2>
     <p class="tagline">XXXXXX</p>
    	<div class="output2"></div>	
-	  <h2 class="hero_header"><span class="light"><br>Upliftium  Burn Rank</span>
+	  <h2 class="hero_header"><span class="light"><br><hr>Top 100 Upliftium Burn</span></h2>
       <p class="tagline"> XXXXXX</p>
-	  </h2>
+	  
      <div class="output3"></div>
      
-     <h2 class="hero_header"><span class="light"><br>Top MIO holders</span>
+     <h2 class="hero_header"><span class="light"><br><hr>Top 50 MIO</span></h2>
       <p class="tagline"> XXXXXX</p>
-	  </h2>
+	  
      <div class="outputMio"></div>
 
    <script src="app.js"></script>
