--- a/index.html
+++ b/index.html
@@ -23,25 +23,23 @@
 <!-- Main Container -->
 <div class="container"> 
   <!-- Navigation -->
-  <header> <a href="">
+  <header> 
     <h2 class="logo">Upliftium Statistics</h2>
-    </a>
   </header>
   <!-- Hero Section -->
   <section class="hero" id="hero">
-    <h2 class="hero_header"><span class="light"><br><hr>Top 25 Liftium ALCOR</span></h2>
-    <p class="tagline">XXXXXX</p>
+    <h2 class="hero_header"><span class="light"><hr>Top 25 Liftium ALCOR</span></h2>
 	 <div class="output"></div>
-	 <h2 class="hero_header"><span class="light"><br><hr>Top 100 Land Key</span></h2>
-    <p class="tagline">XXXXXX</p>
+	 <h2 class="hero_header"><span class="light"><hr>Top 100 Land Key</span></h2>
+
    	<div class="output2"></div>	
-	  <h2 class="hero_header"><span class="light"><br><hr>Top 100 Upliftium Burn</span></h2>
-      <p class="tagline"> XXXXXX</p>
+	  <h2 class="hero_header"><span class="light"><hr>Top 100 Upliftium Burn</span></h2>
+ 
 	  
      <div class="output3"></div>
      
-     <h2 class="hero_header"><span class="light"><br><hr>Top 50 MIO</span></h2>
-      <p class="tagline"> XXXXXX</p>
+     <h2 class="hero_header"><span class="light"><hr>Top 50 MIO</span></h2>
+    
 	  
      <div class="outputMio"></div>
 
