--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 <div class="container"> 
   <!-- Navigation -->
   <header> 
-    <h2 class="logo">Upliftium Statistics</h2>
+    <h1 class="logo">Upliftium Statistics</h1>
   </header>
   <!-- Hero Section -->
   <section class="hero" id="hero">
-    <h2 class="hero_header"><span class="light"><hr>Top 25 Liftium ALCOR</span></h2>
+    <h2 class="hero_header"><span class="light">Top 25 Liftium ALCOR</span></h2>
 	 <div class="output"></div>
 	 <h2 class="hero_header"><span class="light"><hr>Top 100 Land Key</span></h2>
 
