--- a/index.html
+++ b/index.html
@@ -1,84 +1,98 @@
 <!doctype html>
 <html lang="en-US">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Upliftium Information</title> 
-<link href="css/singlePageTemplate.css" rel="stylesheet" type="text/css">
-<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
-<script>var __adobewebfontsappname__="dreamweaver"</script>
-<script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
-	
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Upliftium Information</title>
+  <link href="css/singlePageTemplate.css" rel="stylesheet" type="text/css">
+  <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
+  <script>
+    var __adobewebfontsappname__ = "dreamweaver"
+  </script>
+  <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
+
 <body>
+  <!-- Main Container -->
+  <div class="container">
+    <!-- Navigation -->
+    <header>
+      <h1 class="logo">Upliftium Statistics</h1>
+    </header>
+    <!-- Hero Section -->
+    <section class="hero" id="hero">
+      <h2 class="hero_header"><span class="light">Top 25 Liftium ALCOR</span></h2>
+      <div class="output"></div>
+      <h2 class="hero_header"><span class="light">
+          <hr>Top 100 Land Key</span></h2>
+
+      <div class="output2"></div>
+      <h2 class="hero_header"><span class="light">
+          <hr>Top 100 Upliftium Burn</span></h2>
 
 
-<!-- Main Container -->
-<div class="container"> 
-  <!-- Navigation -->
-  <header> 
-    <h1 class="logo">Upliftium Statistics</h1>
-  </header>
-  <!-- Hero Section -->
-  <section class="hero" id="hero">
-    <h2 class="hero_header"><span class="light">Top 25 Liftium ALCOR</span></h2>
-	 <div class="output"></div>
-	 <h2 class="hero_header"><span class="light"><hr>Top 100 Land Key</span></h2>
+      <div class="output3"></div>
 
-   	<div class="output2"></div>	
-	  <h2 class="hero_header"><span class="light"><hr>Top 100 Upliftium Burn</span></h2>
- 
-	  
-     <div class="output3"></div>
-     
-     <h2 class="hero_header"><span class="light"><hr>Top 50 MIO</span></h2>
-    
-	  
-     <div class="outputMio"></div>
+      <h2 class="hero_header"><span class="light">
+          <hr>Top 50 MIO</span></h2>
 
-   <script src="app.js"></script>
-   <script src="TopKeyHolders.js"></script>
-   <script src="TopBurn.js"></script>
-   
-   <script src="mioStats.js"></script>
-   
-  </section>
 
-  <!-- Stats Gallery Section -->
-  <div class="gallery">
-    <div class="thumbnail">
-      <h2 class="stats">	<div class="outputCircSup"></div>	</h2>
-      <h4>CIRCULATING</h4>
-      <p>Supply of Upliftium</p>
+      <div class="outputMio"></div>
+
+      <script src="app.js"></script>
+      <script src="TopKeyHolders.js"></script>
+      <script src="TopBurn.js"></script>
+
+      <script src="mioStats.js"></script>
+
+    </section>
+
+    <!-- Stats Gallery Section -->
+    <div class="gallery">
+      <div class="thumbnail">
+        <h2 class="stats">
+          <div class="outputCircSup"></div>
+        </h2>
+        <h4>CIRCULATING</h4>
+        <p>Supply of Upliftium</p>
+      </div>
+      <div class="thumbnail">
+        <h2 class="stats">
+          <div class="outputIssuedSup"></div>
+        </h2>
+        <h4>ISSUED</h4>
+        <p>Supply of Upliftium</p>
+      </div>
+      <div class="thumbnail">
+        <h2 class="stats">
+          <div class="outputClaimable">
+        </h2>
+        <h4>CLAIMABLE</h4>
+        <p>Upliftium yet to be claimed</p>
+      </div>
+      <div class="thumbnail">
+        <h2 class="stats">
+          <div class="outputTransactionType"></div>
+        </h2>
+        <h4>Transactions</h4>
+        <p>In Game Shop Transactions</p>
+      </div>
+      <script src="stats.js"></script>
     </div>
-    <div class="thumbnail">
-      <h2 class="stats"><div class="outputIssuedSup"></div></h2>
-      <h4>ISSUED</h4>
-      <p>Supply of Upliftium</p>
-    </div>
-    <div class="thumbnail">
-      <h2 class="stats"><div class="outputClaimable"></h2>
-      <h4>CLAIMABLE</h4>
-      <p>Upliftium yet to be claimed</p>
-    </div>
-    <div class="thumbnail">
-      <h2 class="stats"><div class="outputTransactionType"></div></h2>
-      <h4>Transactions</h4>
-      <p>In Game Shop Transactions</p>
-    </div>
-    <script src="stats.js"></script>
+
+    <!-- Copyrights Section -->
+    <div class="copyright">&copy;2022- <strong>ModdedOutlaw</strong></div>
   </div>
- 
-  <!-- Copyrights Section -->
-  <div class="copyright">&copy;2022- <strong>ModdedOutlaw</strong></div>
-</div>
-<!-- Main Container Ends -->
+  <!-- Main Container Ends -->
 </body>
+
 </html>
