--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   </header>
   <!-- Main Container -->
   <div class="container">
+
+    <!-- stats Container -->
     <div class="gallery">
       <div class="thumbnail">
         <h2 class="stats">
@@ -57,7 +59,26 @@
         <h4>Transactions</h4>
         <p>In Game Shop Transactions</p>
       </div>
-      <script src="stats.js"></script>
+      
+    </div>
+
+
+    <div class="gallery">
+      <div class="thumbnail">
+        <h2 class="stats">
+          <div class="outputTotalBurn"></div>
+        </h2>
+        <h4>Total Burned</h4>
+        <p>Total Upliftium Bunred</p>
+      </div>
+      <div class="thumbnail">
+        <h2 class="stats">
+          <div class="outputIssuedSup"></div>
+        </h2>
+        <h4>Burn Percentage</h4>
+        <p>Supply of Upliftium</p>
+      </div>
+
     </div>
     <!-- Navigation -->
     
@@ -84,7 +105,7 @@
       <script src="app.js"></script>
       <script src="TopKeyHolders.js"></script>
       <script src="TopBurn.js"></script>
-
+      <script src="stats.js"></script>
       <script src="mioStats.js"></script>
 
     </section>
