--- a/index.html
+++ b/index.html
@@ -73,11 +73,44 @@
       </div>
       <div class="thumbnail">
         <h2 class="stats">
-          <div class="outputIssuedSup"></div>
+          <div class="outputCrystallizeNFT"></div>
         </h2>
-        <h4>Burn Percentage</h4>
-        <p>Supply of Upliftium</p>
+        <h4>Crystallized NFTS</h4>
+        <p>Total Upliftium Crystallized to MIO</p>
       </div>
+
+      
+    <div class="gallery">
+      <div class="thumbnail">
+        <h2 class="stats">
+          <div class="MeltNFT"></div>
+        </h2>
+        <h4>Total Melted</h4>
+        <p>Total Melted MIOs</p>
+      </div>
+      <div class="thumbnail">
+        <h2 class="stats">
+          <div class="outputPictures"></div>
+        </h2>
+        <h4>Picture Installs</h4>
+        <p>Total Number of Picture Installs</p>
+      </div>
+
+      <div class="gallery">
+        <div class="thumbnail">
+          <h2 class="stats">
+            <div class="outputPortals"></div>
+          </h2>
+          <h4>Portal Installs</h4>
+          <p>Total Number of Portal Installs</p>
+        </div>
+        <div class="thumbnail">
+          <h2 class="stats">
+            <div class="outputPictures"></div>
+          </h2>
+          <h4>Picture Installs</h4>
+          <p>Total Number of Picture Installs</p>
+        </div>
 
     </div>
     <!-- Navigation -->
