--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
         </div>
         <div class="thumbnail">
           <h2 class="stats">
-            <div class="outputPictures"></div>
+            <div class="outputScreenshots"></div>
           </h2>
-          <h4>Picture Installs</h4>
-          <p>Total Number of Picture Installs</p>
+          <h4>Screen Shots</h4>
+          <p>Total Number of screenshots from uplift</p>
         </div>
 
     </div>
