--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="outputTotalBurn"></div>
         </h2>
         <h4>Total Burned</h4>
-        <p>Total Upliftium Bunend (pictures/portals/wesaveuplift)</p>
+        <p>Total Upliftium Burned (pictures/portals/wesaveuplift)</p>
       </div>
       <div class="thumbnail">
         <h2 class="stats">
