--- a/index.html
+++ b/index.html
@@ -106,8 +106,24 @@
             <div class="outputScreenshots"></div>
           </h2>
           <h4>Screen Shots</h4>
-          <p>Total Number of screenshots from uplift</p>
+          <p>Total Number of screenshots from uplift</p>outputWallets
         </div>
+
+        <div class="gallery">
+          <div class="thumbnail">
+            <h2 class="stats">
+              <div class="outputWallets"></div>
+            </h2>
+            <h4>Wallets</h4>
+            <p>Linked Wallets</p>
+          </div>
+          <div class="thumbnail">
+            <h2 class="stats">
+              <div class="outputScreenshots"></div>
+            </h2>
+            <h4>Screen Shots</h4>
+            <p>Total Number of screenshots from uplift</p>
+          </div>
 
     </div>
     <!-- Navigation -->
