--- a/index.html
+++ b/index.html
@@ -159,6 +159,11 @@
       <script src="TopBurn.js"></script>
       <script src="stats.js"></script>
       <script src="mioStats.js"></script>
+      <script src="alcorStats.js"></script>
+      <!--<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+
+      <script src="alcorChart.js"></script> -->
+      
 
     </section>
 
