--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
 
           <div class="thumbnail">
             <h2 class="stats">
-              <div class="outputScreenshots"></div>
+              <div class="outputTransfers"></div>
             </h2>
-            <h4>Screen Shots</h4>
-            <p>Total Number of screenshots from uplift</p>
+            <h4>Total Number of transfers</h4>
+            <p>MIOs sent to wesaveuplift</p>
           </div>
 
     </div>
