--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="outputScreenshots"></div>
           </h2>
           <h4>Screen Shots</h4>
-          <p>Total Number of screenshots from uplift</p>outputWallets
+          <p>Total Number of screenshots from uplift</p>
         </div>
 
 
@@ -140,19 +140,20 @@
       <div class="output"></div>
       <h2 class="hero_header"><span class="light">
           <hr>Top 100 Land Key</span></h2>
-
       <div class="output2"></div>
+
       <h2 class="hero_header"><span class="light">
           <hr>Top 100 Upliftium Burn</span></h2>
-
-
       <div class="output3"></div>
 
       <h2 class="hero_header"><span class="light">
           <hr>Top 50 MIO</span></h2>
-
-
       <div class="outputMio"></div>
+
+      <h2 class="hero_header"><span class="light">
+        <hr>Mio Donations</span></h2>
+    <div class="outputTransfersList"></div>
+
 
       <script src="app.js"></script>
       <script src="TopKeyHolders.js"></script>
