--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
     
     <!-- Hero Section -->
     <section class="hero" id="hero">
-      <h2 class="hero_header"><span class="light">Top 25 Liftium ALCOR</span></h2>
-      <div class="output"></div>
+      
       <h2 class="hero_header"><span class="light">
           <hr>Top 100 Land Key</span></h2>
       <div class="output2"></div>
@@ -153,7 +152,9 @@
       <h2 class="hero_header"><span class="light">
         <hr>Mio Donations</span></h2>
     <div class="outputTransfersList"></div>
-
+    <h2 class="hero_header"><span class="light">
+      <hr>Top 25 Liftium ALCOR</span></h2>
+   <div class="output"></div>
 
       <script src="app.js"></script>
       <script src="TopKeyHolders.js"></script>
