--- a/saveuplift/index.html
+++ b/saveuplift/index.html
@@ -1,1 +1,47 @@
-ggjng
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>About Page template By Adobe Dreamweaver</title>
+<link href="AboutPageAssets/styles/aboutPageStyle.css" rel="stylesheet" type="text/css">
+
+<!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
+<script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
+</head>
+
+<body>
+<!-- Header content -->
+<header>
+  <div class="profilePhoto"> 
+    <!-- Profile photo --> 
+    <img src="AboutPageAssets/images/uplift-world-community-logo.png" alt="sample" width="280" height="200"> </div>
+  <!-- Identity details -->
+  <section class="profileHeader">
+    <h1>Weekly MIO raffle</h1>
+    <h3>How it works....</h3>
+    <hr>
+    <p>Send any miner to the wallet <strong>moddedwax.gm</strong> ONE AT A TIME. The order sent will be posted in realtime on this page. The order number is your raffle number. The raffle will be held live every Sunday at 8:00 PM eastern timezone. We will use a discord bot and roll once. Whoever has the raffle/order number will be the winner of the 1 MIO. <strong>ALL MINERS WILL BE BURNED AFTER THE RAFFLE</strong>.</p>
+  </section>
+</header>
+<!-- content -->
+<section class="mainContent"> 
+  <!-- Contact details -->
+  <section class="section1">
+    <h2 class="sectionTitle">Raffle Entries</h2>
+    <hr class="sectionTitleRule">
+    <hr class="sectionTitleRule2">
+    <div class="section1Content">
+      <p><span>Email :</span><div id = "outputRaffleEntries"></div></p>
+  
+    </div>
+  </section>
+  <!-- Previous experience details -->
+ 
+</section>
+<footer>
+  <hr>
+  <p class="footerDisclaimer">2021  MODDEDOUTLAW</p>
+</footer>
+</body>
+</html>
