--- a/saveuplift/index.html
+++ b/saveuplift/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>About Page template By Adobe Dreamweaver</title>
+<title>1 MIO Weekly Raffle</title>
 <link href="AboutPageAssets/styles/aboutPageStyle.css" rel="stylesheet" type="text/css">
 
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
@@ -32,16 +32,16 @@
     <hr class="sectionTitleRule">
     <hr class="sectionTitleRule2">
     <div class="section1Content">
-      <p><span>Email :</span><div id = "outputRaffleEntries"></div></p>
+      <p><span>Email :</span><div class = "outputRaffleEntries"></div></p>
   
     </div>
   </section>
   <!-- Previous experience details -->
- 
+  <script src="transferList.js"></script>
 </section>
 <footer>
   <hr>
-  <p class="footerDisclaimer">2021  MODDEDOUTLAW</p>
+  <p class="footerDisclaimer">2022  MODDEDOUTLAW</p>
 </footer>
 </body>
 </html>
