--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <h2 class="stats">
               <div class="outputTransfers"></div>
             </h2>
-            <h4>Total Number of transfers</h4>
+            <h4>Upliftium Donations</h4>
             <p>MIOs sent to wesaveuplift</p>
           </div>
 
