--- a/saveuplift/index.html
+++ b/saveuplift/index.html
@@ -18,10 +18,10 @@
     <img src="AboutPageAssets/images/uplift-world-community-logo.png" alt="sample" width="280" height="200"> </div>
   <!-- Identity details -->
   <section class="profileHeader">
-    <h1>Weekly MIO raffle</h1>
-    <h3>How it works....</h3>
+    <h1>Weekly MIO raffles</h1>
+    <h3>Every 10 entries another MIO will be added to the prize pool!</h3>
     <hr>
-    <p>Send any miner to the wallet <strong>moddedwax.gm</strong> ONE AT A TIME. The order sent will be posted in realtime on this page. The order number is your raffle number. The raffle will be held live every Sunday at 8:00 PM eastern timezone. We will use a discord bot and roll once. Whoever has the raffle/order number will be the winner of the 1 MIO. <strong>ALL MINERS WILL BE BURNED AFTER THE RAFFLE</strong>.</p>
+    <p>Send any miner to the wallet <strong>moddedwax.gm</strong> ONE AT A TIME. This wallet will only have miners and the MIOs that will be awarded as prizes. Your entry will be posted in realtime on this page. The order received is your raffle number. The raffle will be held every week or more often based on demand. We will use a discord bot for the winning number. Whoever has the raffle/order number will be the winner of the 1 MIO. Next raffle will be help</p>
   </section>
 </header>
 <!-- content -->
