--- a/saveuplift/index.html
+++ b/saveuplift/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
 <head>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap" rel="stylesheet">
+	
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>1 MIO Weekly Raffle</title>
@@ -15,13 +19,15 @@
 <header>
   <div class="profilePhoto"> 
     <!-- Profile photo --> 
-    <img src="AboutPageAssets/images/uplift-world-community-logo.png" alt="sample" width="280" height="200"> </div>
+    <img src="AboutPageAssets/images/uplift-world-community-logo.png" alt="Uplift Community Project" width="280" height="200"> 
+  </div>
+
   <!-- Identity details -->
   <section class="profileHeader">
     <h1>Weekly MIO raffles</h1>
     <h3>Every 10 entries another MIO will be added to the prize pool!</h3>
     <hr>
-    <p>Send any miner to the wallet <strong>moddedwax.gm</strong> ONE AT A TIME. This wallet will only have miners and the MIOs that will be awarded as prizes. Your entry will be posted in realtime on this page. The order received is your raffle number. The raffle will be held every week or more often based on demand. We will use a discord bot for the winning number. Whoever has the raffle/order number will be the winner of the 1 MIO. Next raffle will be help</p>
+    <p>Send any miner to the wallet <strong>moddedwax.gm</strong> ONE AT A TIME. This wallet will only have miners and the MIOs that will be awarded as prizes. Your entry will be posted in realtime on this page. The order received is your raffle number. The raffle will be held every week or more often based on demand. I will use a discord bot's /roll random number generator for the winning number.</p>
   </section>
 </header>
 <!-- content -->
@@ -29,11 +35,8 @@
   <!-- Contact details -->
   <section class="section1">
     <h2 class="sectionTitle">Raffle Entries</h2>
-    <hr class="sectionTitleRule">
-    <hr class="sectionTitleRule2">
     <div class="section1Content">
-      <p><span>Email :</span><div class = "outputRaffleEntries"></div></p>
-  
+      <p><div class = "outputRaffleEntries"></div></p>
     </div>
   </section>
   <!-- Previous experience details -->
