--- a/saveuplift/index.html
+++ b/saveuplift/index.html
@@ -27,7 +27,7 @@
     <h1>Weekly MIO raffles</h1>
     <h3>Every 10 entries another MIO will be added to the prize pool!</h3>
     <hr>
-    <p>Send any miner to the wallet <strong>moddedwax.gm</strong> ONE AT A TIME. This wallet will only have miners and the MIOs that will be awarded as prizes. Your entry will be posted in realtime on this page. The order miners are received will be the raffle numbers. The raffle will be held every week or more often based on demand. I will use a discord bot's /roll random number generator for the winning number.</p>
+    <p>Send any miner to the wallet <strong>moddedwax.gm</strong> ONE AT A TIME. This wallet will only have miners and the MIOs that will be awarded as prizes. Your entry will be posted immediately on this page. The order miners are received will be the raffle numbers. The raffle will be held every week or more often based on demand. I will use a discord bot's /roll random number generator for the winning number.&nbsp; Good Luck! - ModdedOutlaw&nbsp;</p>
   </section>
 </header>
 <!-- content -->
