--- a/index.html
+++ b/index.html
@@ -163,8 +163,9 @@
       <script src="mioStats.js"></script>
       <script src="alcorStats.js"></script>
       <script src="transferList.js"></script>
+      <!--
       <script src="alcorChart.js"></script>
-      <!--<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+      <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
       <script src="alcorChart.js"></script> -->
       
