--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <section class="hero" id="hero">
       
       <h2 class="hero_header"><span class="light">
-          <hr>Top 100 Land Key</span></h2>
+          <hr>Top 100 Land Key (NOT ACCURATE!! COUNTING LAND KEYS CURRENTLY. SORRY. - Modded </span></h2>
       <div class="output2"></div>
 
       <h2 class="hero_header"><span class="light">
